--- a/collated/main/A0139520L.md
+++ b/collated/main/A0139520L.md
@@ -9,12 +9,12 @@ public class AddCommand extends Command {
     public static final String COMMAND_WORD = "ADD";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": Adds a task to the task manager.\n"
-    // + "Example: " + COMMAND_WORD
-    // + " eat lunch ON thursday\n"
             + "Type HELP for user guide with detailed explanations of all commands";
 
     public static final String MESSAGE_SUCCESS = "New task added: %1$s";
     public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in the task manager";
+    public static final String MESSAGE_BLOCKED_OUT_TIME = "This task cannot be added as time clashes "
+            + "with another event";
 
     private final Task toAdd;
 
@@ -31,22 +31,9 @@ public class AddCommand extends Command {
             categorySet.add(new Category(categoryName));
         }
         this.toAdd = new Task(new TaskName(taskName), new StartDate(startDate), new StartTime(startTime),
-                new EndDate(endDate), new EndTime(endTime), new Boolean(false), new UniqueCategoryList(categorySet));
+                new EndDate(endDate), new EndTime(endTime), Boolean.FALSE, new UniqueCategoryList(categorySet));
     }
 
-    @Override
-    public CommandResult execute() throws CommandException {
-        assert model != null;
-        try {
-            model.addTask(toAdd);
-            return new CommandResult(String.format(MESSAGE_SUCCESS, toAdd));
-        } catch (UniqueTaskList.DuplicateTaskException e) {
-            throw new CommandException(MESSAGE_DUPLICATE_TASK);
-        }
-
-    }
-
-}
 ```
 ###### \java\seedu\taskmanager\logic\commands\ListCompletedCommand.java
 ``` java
@@ -80,7 +67,7 @@ public class MarkCommand extends Command {
             + "Existing values will be overwritten by the input values.\n"
             + "Parameters: INDEX (must be a positive integer)\n" + "Example: " + COMMAND_WORD + " 1 ";
 
-    public static final String MESSAGE_MARK_TASK_SUCCESS = "Task is marked as completed! : %1$s";
+    public static final String MESSAGE_MARK_TASK_SUCCESS = "Task is marked as completed: %1$s";
     public static final String MESSAGE_DUPLICATE_TASK = "This task has already been completed.";
     public static final String MESSAGE_ALREADY_MARKED = "This task is already marked as complete.";
 
@@ -137,7 +124,7 @@ public class UnmarkCommand extends Command {
             + "by the index number used in the last task listing as incomplete.\n"
             + "Parameters: INDEX (must be a positive integer)\n" + "Example: " + COMMAND_WORD + " 1 ";
 
-    public static final String MESSAGE_UNMARK_TASK_SUCCESS = "Task is marked as incomplete : %1$s";
+    public static final String MESSAGE_UNMARK_TASK_SUCCESS = "Task is marked as incomplete: %1$s";
     public static final String MESSAGE_DUPLICATE_TASK = "This incompleted task already exists.";
     public static final String MESSAGE_ALREADY_UNMARKED = "This task is already marked as incomplete.";
 
@@ -210,51 +197,34 @@ public class AddCommandParser {
             String endDate = EMPTY_FIELD;
             String endTime = EMPTY_FIELD;
 
-            /*
-             * Checks to ensure correct combinations of arguments are added by
-             * user when adding tasks to the task manager
-             */
-
             addTaskInputValidation(onPrefixInput, byPrefixInput, fromPrefixInput, toPrefixInput);
 
-            if ((!fromPrefixInput.equals("EMPTY_FIELD")) && (!toPrefixInput.equals("EMPTY_FIELD"))) {
-                if ((!fromPrefixInput.equals("EMPTY_FIELD")) && (!(fromPrefixInput.matches("\\d+")))) {
+            if (isFromToEvent(fromPrefixInput, toPrefixInput)) {
+                if ((!isMatchedInput(fromPrefixInput.trim(), "\\d+"))) {
                     String[] splitedFromPrefixInput = fromPrefixInput.split("\\s+");
                     try {
-                        if (splitedFromPrefixInput[0].matches(STARTDATE_VALIDATION_REGEX2)) {
-                            startDate = CurrentDate.getNewDate(splitedFromPrefixInput[0]);
-                            // startDate = convertDateForm(startDate);
-                        } else {
-                            startDate = splitedFromPrefixInput[0];
-                        }
-
+                        startDate = processInputToDateForm(splitedFromPrefixInput);
                         startTime = splitedFromPrefixInput[1];
 
                     } catch (ArrayIndexOutOfBoundsException aioobe) {
                         startTime = "0000";
-                        /*
-                         * if (splitedStartTime[0].matches(
-                         * STARTDATE_VALIDATION_REGEX2) ) { startTime =
-                         * CurrentDate.getNewDate(splitedStartTime[0]); }
-                         */
+
                     }
+                    excessInputCheck(splitedFromPrefixInput);
                 }
 
-                if ((!toPrefixInput.equals("EMPTY_FIELD")) && (!toPrefixInput.matches("\\d+"))) {
-                    String[] splitedToPrefixInput = toPrefixInput.split("\\s+");
-                    try {
-                        if (splitedToPrefixInput[0].matches(STARTDATE_VALIDATION_REGEX2)) {
-                            endDate = CurrentDate.getNewDate(splitedToPrefixInput[0]);
-                            // endDate = convertDateForm(endDate);
-                        } else {
-                            endDate = splitedToPrefixInput[0];
-                        }
-                        endTime = splitedToPrefixInput[1];
+                validToPrefixInputCheck(toPrefixInput);
 
-                    } catch (ArrayIndexOutOfBoundsException aioobe) {
-                        endTime = "2359";
-                    }
+                String[] splitedToPrefixInput = toPrefixInput.split("\\s+");
+                try {
+                    endDate = processInputToDateForm(splitedToPrefixInput);
+                    endTime = splitedToPrefixInput[1];
+
+                } catch (ArrayIndexOutOfBoundsException aioobe) {
+                    endTime = "2359";
                 }
+                excessInputCheck(splitedToPrefixInput);
+
             }
 
             /*
@@ -262,94 +232,53 @@ public class AddCommandParser {
              * incorrect arguments of date are included
              */
 
-            else if (!(onPrefixInput.equals(EMPTY_FIELD))) {
+            else if (isOnEvent(onPrefixInput)) {
                 String[] splited = onPrefixInput.split("\\s+");
-                startDate = splited[0];
-                startDate = convertDateForm(startDate);
+                startDate = processInputToDateForm(splited);
                 endDate = startDate;
-
                 try {
                     startTime = splited[1];
 
-                    if (!isValidTime(startTime)) {
-                        throw new IllegalValueException(INVALID_TIME);
-                    }
-
-                    if (toPrefixInput.equals(EMPTY_FIELD)) {
-
-                        endTime = Integer.toString(100 + Integer.parseInt(startTime));
-
-                        if (!isValidTime(endTime)) {
-                            // endDate = nextDay(due to +1hr > 2400hrs)
-                            endTime = Integer.toString(Integer.parseInt(endTime) - 2400);
-
-                            endTime = fourDigitTimeFormat(endTime);
-
+                    if (isEmptyField(toPrefixInput)) {
+                        endTime = DateTimeUtil.includeOneHourBuffer(startTime);
+                        if (Integer.parseInt(endTime) < 100) {
+                            endDate = DateTimeUtil.getFutureDate(1, "days", endDate);
                         }
 
                     } else {
                         String[] splitedToPrefixInput = toPrefixInput.split("\\s+");
-                        try {
-                            if (!(splitedToPrefixInput[1].isEmpty())) {
-                                throw new IllegalValueException("End time for task "
-                                        + "should only contain a day (e.g. thursday) "
-                                        + "or a date with the format: DD/MM/YY (e.g. 03/03/17))\n"
-                                        + "May also include time (e.g. 1400) behind date in some instances\n"
-                                        + "Enter HELP for user guide with detailed explanations of all commands");
-                            }
-                        } catch (ArrayIndexOutOfBoundsException aioobe) {
-                            endTime = splitedToPrefixInput[0];
-                            if (!(endTime.matches("\\d{4}"))) {
-                                throw new NoSuchElementException();
-                            }
-                            if (!isValidTime(endTime)) {
-                                throw new IllegalValueException(INVALID_TIME);
-                            }
-                        }
+                        endTime = processToPrefixInput(endTime, splitedToPrefixInput);
                     }
                 } catch (ArrayIndexOutOfBoundsException aioobe) {
                     startTime = "0000";
-                    if (toPrefixInput.equals(EMPTY_FIELD)) {
+
+                    if (isEmptyField(toPrefixInput)) {
                         endTime = "2359";
                     } else {
                         String[] splitedToPrefixInput = toPrefixInput.split("\\s+");
-                        try {
-                            if (!(splitedToPrefixInput[1].isEmpty())) {
-                                throw new IllegalValueException("When using prefix ON and TO, input after prefix"
-                                        + "TO should only include time (e.g. 1400)\n"
-                                        + "Enter HELP for user guide with detailed explanations of all commands");
-                            }
-                        } catch (ArrayIndexOutOfBoundsException aiobe) {
-                            endTime = splitedToPrefixInput[0];
-                            if (!isValidTime(endTime)) {
-                                throw new IllegalValueException(INVALID_TIME);
-                            }
-                            compareStartEndTime(startTime, endTime);
-                        }
+                        endTime = processToPrefixInput(endTime, splitedToPrefixInput);
                     }
                 }
-                try {
-                    if (!(splited[2].isEmpty())) {
-                        throw new NoSuchElementException("");
-                    }
-                } catch (ArrayIndexOutOfBoundsException aioobe) {
-                }
+                excessInputCheck(splited);
 
             }
 
             /*
-             * To parse deadline input if required and throws exceptions if
-             * incorrect arguments of deadline are included
+             * To parse Input before byPrefix and incorrect arguments of
+             * deadline are included
              */
 
-            else if (!(byPrefixInput.equals(EMPTY_FIELD))) {
+            else if (!isEmptyField(byPrefixInput)) {
                 String[] splited = byPrefixInput.split("\\s+");
                 endDate = splited[0];
-                endDate = convertDateForm(endDate);
+                endDate = processInputToDateForm(splited);
+                if (endDate.trim().matches("STARTDATE_VALIDATION_REGEX2")) {
+                    endDate = DateTimeUtil.getNewDate(endDate);
+                }
                 try {
                     endTime = splited[1];
 
-                    if (!isValidTime(endTime)) {
+                    if (!DateTimeUtil.isValidTime(endTime)) {
                         throw new IllegalValueException(INVALID_TIME);
                     }
 
@@ -360,12 +289,12 @@ public class AddCommandParser {
                             + "Example of Allowed Format: ADD project meeting BY thursday 1400 \n"
                             + "Type HELP for user guide with detailed explanations of all commands");
                 }
-                try {
-                    if (!(splited[2].isEmpty())) {
-                        throw new NoSuchElementException("");
-                    }
-                } catch (ArrayIndexOutOfBoundsException aioobe) {
-                }
+                excessInputCheck(splited);
+            }
+
+            if (isValidEvent(startDate, startTime, endDate, endTime)
+                    && !DateTimeUtil.isValidEventTimePeriod(startDate, startTime, endDate, endTime)) {
+                throw new IllegalValueException("Invalid input of time, start time has to be earlier than end time");
             }
 
             return new AddCommand(taskName, startDate, startTime, endDate, endTime,
@@ -377,69 +306,121 @@ public class AddCommandParser {
             return new IncorrectCommand(ive.getMessage());
         } catch (ArrayIndexOutOfBoundsException aioobe) {
             return new IncorrectCommand(
-                    "Invalid command input!\nExample of Allowed Format: ADD e-mail John BY thursday 1400\n"
-                            + "Type HELP for user guide with detailed explanations of all commands");
+                    "Invalid command input!\n" + "Type HELP for user guide with detailed explanations of all commands");
         } catch (NumberFormatException nfe) {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, AddCommand.MESSAGE_USAGE));
         }
     }
 
-    private String fourDigitTimeFormat(String endTime) {
-        if (Integer.parseInt(endTime) >= 10) {
-            StringBuilder stringBuilderTime = new StringBuilder();
+    private void excessInputCheck(String[] splited) {
+        try {
+            if (!(splited[2].isEmpty())) {
+                throw new NoSuchElementException("");
+            }
+        } catch (ArrayIndexOutOfBoundsException aioobe) {
+        }
+    }
 
-            stringBuilderTime.append("00");
-            stringBuilderTime.append(endTime);
-            endTime = stringBuilderTime.toString();
-
-        } else {
-            StringBuilder stringBuilderTime = new StringBuilder();
-
-            stringBuilderTime.append("000");
-            stringBuilderTime.append(endTime);
-            endTime = stringBuilderTime.toString();
+    private String processToPrefixInput(String endTime, String[] splitedToPrefixInput) {
+        try {
+            if (!(splitedToPrefixInput[1].isEmpty())) {
+                throw new NoSuchElementException("");
+            }
+        } catch (ArrayIndexOutOfBoundsException aioobe) {
+            endTime = splitedToPrefixInput[0];
         }
         return endTime;
     }
 
-    private void compareStartEndTime(String startTime, String endTime) throws IllegalValueException {
-        if (Integer.parseInt(startTime) > Integer.parseInt(endTime)) {
-            throw new IllegalValueException("Invalid input of time, start time has to be earlier than end time");
+    private boolean isOnEvent(String onPrefixInput) {
+        return !isEmptyField(onPrefixInput);
+    }
+
+    /**
+     * Process input after To Prefix into the appropriate End Date form
+     */
+    private String processInputToDateForm(String[] splitedToPrefixInput) throws IllegalValueException {
+        String endDate;
+        if (isMatchedInput(splitedToPrefixInput[0].trim(), STARTDATE_VALIDATION_REGEX2)) {
+            endDate = DateTimeUtil.getNewDate(splitedToPrefixInput[0]);
+        } else {
+            endDate = splitedToPrefixInput[0];
+
+        }
+        return endDate;
+    }
+
+    /**
+     * Check that Input after TO prefix is not in only time format
+     */
+    private void validToPrefixInputCheck(String toPrefixInput) {
+        if (isMatchedInput(toPrefixInput.trim(), "\\d+")) {
+            throw new NoSuchElementException("");
         }
     }
 
-    private String convertDateForm(String date) throws IllegalValueException {
-        if (date.matches(STARTDATE_VALIDATION_REGEX2)) {
-            date = CurrentDate.getNewDate(date);
-        }
-        return date;
+    private boolean isMatchedInput(String input, String regex) {
+        return input.matches(regex);
     }
 
-    private boolean isValidTime(String value) {
-        return (value.matches("\\d+") && (Integer.parseInt(value) < 2400) && (Integer.parseInt(value) >= 0)
-                && (((Integer.parseInt(value)) % 100) < 60));
+    private boolean isFromToEvent(String fromPrefixInput, String toPrefixInput) {
+        return (!fromPrefixInput.equals("EMPTY_FIELD")) && (!toPrefixInput.equals("EMPTY_FIELD"));
     }
+
+    private boolean isValidEvent(String startDate, String startTime, String endDate, String endTime) {
+        return !isEmptyField(startTime) && !isEmptyField(endTime) && !isEmptyField(startDate) && !isEmptyField(endDate);
+    }
+
+    /**
+     * Validation check of given {@code String} arguments passed in by user
+     * Invalid combinations of arguments added by the user will cause
+     * NoSuchElementException to be thrown
+     */
 
     private void addTaskInputValidation(String date, String deadline, String startTime, String endTime) {
-        if (date.equals(EMPTY_FIELD) || deadline.equals(EMPTY_FIELD) || startTime.equals(EMPTY_FIELD)
-                || endTime.equals(EMPTY_FIELD)) {
-            if (!(date.equals(EMPTY_FIELD)) && (!(deadline.equals(EMPTY_FIELD)) || !(startTime.equals(EMPTY_FIELD)))) {
-                throw new NoSuchElementException("");
+        boolean isValidCombination = true;
+        if (isNotFloatingTask(date, deadline, startTime, endTime)) {
+            if (isInvalidOnPrefixCombination(date, deadline, startTime)) {
+                isValidCombination = false;
             }
-            if (!(deadline.equals(EMPTY_FIELD)) && (!(date.equals(EMPTY_FIELD)) || !(startTime.equals(EMPTY_FIELD))
-                    || !(endTime.equals(EMPTY_FIELD)))) {
-                throw new NoSuchElementException("");
+            if (isInvalidByPrefixCombination(date, deadline, startTime, endTime)) {
+                isValidCombination = false;
             }
-            if ((!(startTime.equals(EMPTY_FIELD))
-                    && (date.equals(EMPTY_FIELD) && deadline.equals(EMPTY_FIELD) && endTime.equals(EMPTY_FIELD)))
-                    || (!(startTime.equals(EMPTY_FIELD))
-                            && (!(date.equals(EMPTY_FIELD)) || !(deadline.equals(EMPTY_FIELD))))) {
-                throw new NoSuchElementException("");
+            if (isInvalidFromPrefixCombination(date, deadline, startTime, endTime)) {
+                isValidCombination = false;
             }
-            if (!(endTime.equals(EMPTY_FIELD)) && (date.equals(EMPTY_FIELD) && startTime.equals(EMPTY_FIELD))) {
+            if (isInvalidToPrefixCombination(date, startTime, endTime)) {
+                isValidCombination = false;
+            }
+            if (!isValidCombination) {
                 throw new NoSuchElementException("");
             }
         }
+    }
+
+    private boolean isInvalidToPrefixCombination(String date, String startTime, String endTime) {
+        return !isEmptyField(endTime) && (isEmptyField(date) && isEmptyField(startTime));
+    }
+
+    private boolean isInvalidFromPrefixCombination(String date, String deadline, String startTime, String endTime) {
+        return (!isEmptyField(startTime) && (isEmptyField(date) && isEmptyField(deadline) && isEmptyField(endTime)))
+                || isInvalidOnPrefixCombination(startTime, date, deadline);
+    }
+
+    private boolean isInvalidByPrefixCombination(String date, String deadline, String startTime, String endTime) {
+        return !isEmptyField(deadline) && (!isEmptyField(date) || !isEmptyField(startTime) || !isEmptyField(endTime));
+    }
+
+    private boolean isInvalidOnPrefixCombination(String date, String deadline, String startTime) {
+        return !isEmptyField(date) && (!isEmptyField(deadline) || !isEmptyField(startTime));
+    }
+
+    private boolean isNotFloatingTask(String date, String deadline, String startTime, String endTime) {
+        return isEmptyField(date) || isEmptyField(deadline) || isEmptyField(startTime) || isEmptyField(endTime);
+    }
+
+    private boolean isEmptyField(String date) {
+        return date.equals(EMPTY_FIELD);
     }
 
 }
@@ -502,12 +483,85 @@ public class UnmarkCommandParser {
      */
     void updateFilteredTaskListToShowByCompletion(boolean bool);
 
-    void unmarkTask(int filteredTaskListIndex) throws DuplicateTaskException;
-
-}
 ```
 ###### \java\seedu\taskmanager\model\ModelManager.java
 ``` java
+
+    /**
+     * Checks if added task clashes with another existing task in the task
+     * manager and returns an integer.
+     *
+     * @return index of clashing task in filteredTaskList if clashing task
+     *         exisits
+     * @return -1 if otherwise
+     */
+    @Override
+    public int isBlockedOutTime(Task t) throws UniqueTaskList.DuplicateTaskException {
+        int index = 0;
+        while (index < (filteredTasks.size())) {
+            if (filteredTasks.get(index).isEventTask() && !filteredTasks.get(index).getIsMarkedAsComplete()
+                    && t.isWithinStartEndDuration(filteredTasks.get(index))) {
+                if (isAddEventEarlierAddListIndex(t, filteredTasks.get(index))) {
+                    return index + 2;
+                }
+                return index + 1;
+            }
+            index++;
+        }
+        return -1;
+    }
+
+    /**
+     * Checks if updated task clashes with another existing task in the task
+     * manager and returns an integer.
+     *
+     * @return index of clashing task in filteredTaskList if clashing task
+     *         exisits
+     * @return -1 if otherwise
+     */
+    @Override
+    public int isBlockedOutTime(Task t, int UpdateTaskIndex) throws UniqueTaskList.DuplicateTaskException {
+        int index = 0;
+        while (index < (filteredTasks.size())) {
+            if ((index != (UpdateTaskIndex)) && filteredTasks.get(index).isEventTask()
+                    && !filteredTasks.get(index).getIsMarkedAsComplete()
+                    && t.isWithinStartEndDuration(filteredTasks.get(index))) {
+                if (isAddEventEarlierAddListIndex(t, filteredTasks.get(index))) {
+                    if (UpdateTaskIndex > index) {
+                        return index + 2;
+                    } else {
+                        return index + 1;
+                    }
+                } else {
+                    if (UpdateTaskIndex > index) {
+                        return index + 1;
+                    } else {
+                        return index;
+                    }
+                }
+            }
+            index++;
+        }
+        return -1;
+    }
+
+    @Override
+    public int updateTask(int filteredTaskListIndex, ReadOnlyTask editedTask)
+            throws UniqueTaskList.DuplicateTaskException {
+        assert editedTask != null;
+        saveInstance();
+        int taskManagerIndex = filteredTasks.getSourceIndex(filteredTaskListIndex);
+        int updateIndex = taskManager.updateTask(taskManagerIndex, editedTask);
+        indicateTaskManagerChanged();
+        return updateIndex;
+    }
+
+```
+###### \java\seedu\taskmanager\model\ModelManager.java
+``` java
+    /**
+     * Marks task with the given index in the filteredTaskList.
+     */
     @Override
     public void markTask(int filteredTaskListIndex) throws UniqueTaskList.DuplicateTaskException {
         saveInstance();
@@ -519,6 +573,9 @@ public class UnmarkCommandParser {
 ```
 ###### \java\seedu\taskmanager\model\ModelManager.java
 ``` java
+    /**
+     * Unmarks task with the given index in the filteredTaskList.
+     */
     @Override
     public void unmarkTask(int filteredTaskListIndex) throws UniqueTaskList.DuplicateTaskException {
         saveInstance();
@@ -535,74 +592,7 @@ public class UnmarkCommandParser {
     @Override
     public void updateFilteredTaskListToShowByCompletion(boolean isComplete) {
         updateFilteredTaskList(new PredicateExpression(new CompletedQualifier(isComplete)));
-    }
-
-    // ========== Inner classes/interfaces used for filtering
-    // =================================================
-
-    interface Expression {
-        boolean satisfies(ReadOnlyTask task);
-
-        String toString();
-    }
-
-    private class PredicateExpression implements Expression {
-
-        private final Qualifier qualifier;
-
-        PredicateExpression(Qualifier qualifier) {
-            this.qualifier = qualifier;
-        }
-
-        @Override
-        public boolean satisfies(ReadOnlyTask task) {
-            return qualifier.run(task);
-        }
-
-        @Override
-        public String toString() {
-            return qualifier.toString();
-        }
-    }
-
-    interface Qualifier {
-        boolean run(ReadOnlyTask task);
-
-        String toString();
-    }
-
-    private class TaskQualifier implements Qualifier {
-        private Set<String> taskKeyWords;
-
-        TaskQualifier(Set<String> taskKeyWords) {
-            this.taskKeyWords = taskKeyWords;
-        }
-
-        public boolean run(ReadOnlyTask task) {
-            return (taskKeyWords.stream()
-                    .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getTaskName().fullTaskName, keyword))
-                    .findAny().isPresent())
-                    || (taskKeyWords.stream()
-                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getStartDate().value, keyword))
-                            .findAny().isPresent())
-                    || (taskKeyWords.stream()
-                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getStartTime().value, keyword))
-                            .findAny().isPresent())
-                    || (taskKeyWords.stream()
-                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getEndDate().value, keyword))
-                            .findAny().isPresent())
-                    || (taskKeyWords.stream()
-                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getEndTime().value, keyword))
-                            .findAny().isPresent())
-                    || (taskKeyWords.stream()
-                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getCategories(), keyword))
-                            .findAny().isPresent());
-        }
-
-        @Override
-        public String toString() {
-            return "task name=" + String.join(", ", taskKeyWords);
-        }
+        indicateTaskManagerChanged();
     }
 
 ```
@@ -647,8 +637,7 @@ public class UnmarkCommandParser {
      * Returns if a given string is a valid task date.
      */
     public static boolean isValidEndDate(String test) {
-        return test.matches(ENDDATE_VALIDATION_REGEX1) || test.matches(ENDDATE_VALIDATION_REGEX2)
-                || test.matches(EMPTY_FIELD);
+        return (test.matches(ENDDATE_VALIDATION_REGEX1) && DateTimeUtil.isValidDate(test)) || test.matches(EMPTY_FIELD);
     }
 
 ```
@@ -673,109 +662,26 @@ public class UnmarkCommandParser {
      * Returns true if a given string is a valid Task end time.
      */
     public static boolean isValidEndTime(String test) {
-        return test.matches(ENDTIME_VALIDATION_REGEX1) || test.matches(ENDTIME_VALIDATION_REGEX2)
-                || test.matches(ENDTIME_VALIDATION_REGEX3) || test.matches(ENDTIME_VALIDATION_REGEX4)
-                || test.matches(EMPTY_FIELD);
+        return test.matches(ENDTIME_VALIDATION_REGEX1) || test.matches(EMPTY_FIELD);
     }
 
 ```
-###### \java\seedu\taskmanager\model\task\MarkedTaskList.java
+###### \java\seedu\taskmanager\model\task\ReadOnlyTask.java
 ``` java
-/**
- * A list of Tasks that enforces uniqueness between its elements and does not
- * allow nulls.
- *
- * Supports a minimal set of list operations.
- *
- * @see Task#equals(Object)
- * @see CollectionUtil#elementsAreUnique(Collection)
- */
-public class MarkedTaskList implements Iterable<Task> {
-
-    private final ObservableList<Task> internalList = FXCollections.observableArrayList();
 
     /**
-     * Returns true if the list contains an equivalent task as the given
-     * argument.
-     */
-    public boolean contains(ReadOnlyTask toCheck) {
-        assert toCheck != null;
-        return internalList.contains(toCheck);
-    }
-
-    /**
-     * Adds a task to the list.
+     * Checks the fields populated within the task
      *
+     * @return true if task is a Floating Task
      */
-    public void add(Task toAdd) {
-        assert toAdd != null;
-        internalList.add(toAdd);
-    }
+    boolean isWithinStartEndDuration(ReadOnlyTask t);
 
     /**
-     * Removes the equivalent task from the list.
+     * Checks the isMarkedAsCompleted within the task
      *
-     * @throws TaskNotFoundException
-     *             if no such task could be found in the list.
+     * @return true if task is a Completed Task
      */
-    public boolean remove(ReadOnlyTask toRemove) throws TaskNotFoundException {
-        assert toRemove != null;
-        final boolean taskFoundAndDeleted = internalList.remove(toRemove);
-        if (!taskFoundAndDeleted) {
-            throw new TaskNotFoundException();
-        }
-        return taskFoundAndDeleted;
-    }
-
-    public void setTasks(MarkedTaskList replacement) {
-        this.internalList.setAll(replacement.internalList);
-    }
-
-    public void setTasks(List<? extends ReadOnlyTask> tasks) throws DuplicateTaskException {
-        final MarkedTaskList replacement = new MarkedTaskList();
-        for (final ReadOnlyTask task : tasks) {
-            replacement.add(new Task(task));
-        }
-        setTasks(replacement);
-    }
-
-    public UnmodifiableObservableList<Task> asObservableList() {
-        return new UnmodifiableObservableList<>(internalList);
-    }
-
-    @Override
-    public Iterator<Task> iterator() {
-        return internalList.iterator();
-    }
-
-    @Override
-    public boolean equals(Object other) {
-        return other == this // short circuit if same object
-                || (other instanceof MarkedTaskList // instanceof handles nulls
-                        && this.internalList.equals(((MarkedTaskList) other).internalList));
-    }
-
-    @Override
-    public int hashCode() {
-        return internalList.hashCode();
-    }
-
-    /**
-     * Signals that an operation would have violated the 'no duplicates'
-     * property of the list.
-     */
-    public static class DuplicateTaskException extends DuplicateDataException {
-        protected DuplicateTaskException() {
-            super("Operation would result in duplicate tasks");
-        }
-    }
-
-    /**
-     * Signals that an operation targeting a specified task in the list would
-     * fail because there is no such matching task in the list.
-     */
-    public static class TaskNotFoundException extends Exception {
-    }
+    boolean isCompletedTask();
 
 }
 ```
@@ -800,7 +706,7 @@ public class MarkedTaskList implements Iterable<Task> {
      * Returns if a given string is a valid task date.
      */
     public static boolean isValidStartDate(String test) {
-        return test.matches(STARTDATE_VALIDATION_REGEX1) || test.matches(STARTDATE_VALIDATION_REGEX2)
+        return (test.matches(STARTDATE_VALIDATION_REGEX1) && DateTimeUtil.isValidDate(test))
                 || test.matches(EMPTY_FIELD);
     }
 
@@ -826,11 +732,70 @@ public class MarkedTaskList implements Iterable<Task> {
      * Returns true if a given string is a valid Task start time.
      */
     public static boolean isValidStartTime(String test) {
-        return test.matches(STARTTIME_VALIDATION_REGEX1) || test.matches(STARTTIME_VALIDATION_REGEX2)
-                || test.matches(STARTTIME_VALIDATION_REGEX3) || test.matches(STARTTIME_VALIDATION_REGEX4)
-                || test.matches(EMPTY_FIELD);
+        return test.matches(STARTTIME_VALIDATION_REGEX1) || test.matches(EMPTY_FIELD);
     }
 
+```
+###### \java\seedu\taskmanager\model\task\Task.java
+``` java
+    @Override
+    public boolean isCompletedTask() {
+        return isMarkedAsComplete;
+    }
+
+    /**
+     * Checks if the duration of the readOnlyTask is between the start date/time
+     * and end date/time of this task
+     *
+     * @return true if task is a Floating Task
+     */
+    @Override
+    public boolean isWithinStartEndDuration(ReadOnlyTask t) {
+
+        if (this.getStartDate().equals(t.getStartDate()) && this.getEndDate().equals(t.getEndDate())) {
+            if ((DateTimeUtil.isDateWithin(this.getStartDate().value, t.getStartDate().value,
+                    t.getEndDate().value) == 2)) {
+                if ((this.getStartTime().laterThanOrEqual(t.getEndTime()))
+                        || (t.getStartTime().laterThanOrEqual(this.getEndTime()))) {
+
+                    return false;
+                }
+                return true;
+            } else {
+                return true;
+            }
+        } else if ((this.getEndDate().value).equals(t.getStartDate().value)) {
+            if (t.getStartTime().laterThanOrEqual(this.getEndTime())) {
+                return false;
+            } else {
+                return true;
+            }
+        } else if ((this.getStartDate().value).equals(t.getEndDate().value)) {
+            if (this.getStartTime().laterThanOrEqual(t.getEndTime())) {
+                return false;
+            } else {
+                return true;
+            }
+        } else if ((DateTimeUtil.isDateWithin(this.getStartDate().value, t.getStartDate().value,
+                t.getEndDate().value) == 1)
+                || (DateTimeUtil.isDateWithin(this.getEndDate().value, t.getStartDate().value,
+                        t.getEndDate().value) == 1)
+                || (DateTimeUtil.isDateWithin(t.getStartDate().value, this.getStartDate().value,
+                        this.getEndDate().value) == 1)
+                || (DateTimeUtil.isDateWithin(t.getEndDate().value, this.getStartDate().value,
+                        this.getEndDate().value) == 1)) {
+            return true;
+        } else if ((DateTimeUtil.isDateWithin(this.getStartDate().value, t.getStartDate().value,
+                t.getEndDate().value) == 2) && t.getEndTime().laterThanOrEqual(this.getStartTime())) {
+            return true;
+        } else if ((DateTimeUtil.isDateWithin(this.getEndDate().value, t.getStartDate().value,
+                t.getEndDate().value) == 2) && this.getEndTime().laterThanOrEqual(t.getStartTime())) {
+            return true;
+        }
+
+        return false;
+    }
+}
 ```
 ###### \java\seedu\taskmanager\model\task\TaskName.java
 ``` java
@@ -857,10 +822,44 @@ public class MarkedTaskList implements Iterable<Task> {
     }
 
 ```
+###### \java\seedu\taskmanager\model\task\UniqueTaskList.java
+``` java
+    /**
+     * Marks the task in the list at position {@code index} as
+     * {@code isComplete}.
+     *
+     * @throws DuplicateTaskException
+     *             if updating the task's details causes the task to be
+     *             equivalent to another existing task in the list.
+     * @throws IndexOutOfBoundsException
+     *             if {@code index} < 0 or >= the size of the list.
+     * @throws NoSuchElementException
+     *             if {@code isComplete} equals to task isMarkedAsComplete
+     */
+    public void markTask(int index, boolean isComplete) throws DuplicateTaskException {
+        if (isComplete != internalList.get(index).getIsMarkedAsComplete()) {
+
+            Task taskToMark = new Task(internalList.get(index).getTaskName(), internalList.get(index).getStartDate(),
+                    internalList.get(index).getStartTime(), internalList.get(index).getEndDate(),
+                    internalList.get(index).getEndTime(), internalList.get(index).getIsMarkedAsComplete(),
+                    internalList.get(index).getCategories());
+
+            taskToMark.setIsMarkedAsComplete(isComplete);
+
+            if (!isComplete && internalList.contains(taskToMark)) {
+                throw new DuplicateTaskException();
+            }
+
+            internalList.set(index, taskToMark);
+        } else {
+            throw new NoSuchElementException();
+        }
+    }
+```
 ###### \java\seedu\taskmanager\model\TaskManager.java
 ``` java
     /**
-     * Marks the task in the list at position {@code index} as complete.
+     * Marks the task in the list at position {@code index} as isCompleted.
      *
      * @see #syncMasterCategoryListWith(Task)
      *
