--- a/collated/main/A0141102H.md
+++ b/collated/main/A0141102H.md
@@ -1,17 +1,92 @@
 # A0141102H
+###### \java\seedu\taskmanager\commons\util\DateTimeUtil.java
+``` java
+
+    public static boolean isValidDate(String date) {
+        String[] dmy = date.trim().split("/");
+        int day = Integer.parseInt(dmy[0]);
+        int month = Integer.parseInt(dmy[1]);
+        int year = Integer.parseInt(dmy[2]);
+
+        YearMonth yearMonthObject = YearMonth.of(2000 + year, month);
+
+        return !(day > yearMonthObject.lengthOfMonth() || month > 12);
+    }
+
+    public static String getFutureDate(int loops, String typeOfRecurrence, String existingDate) {
+        String[] dmy = existingDate.trim().split("/");
+        int day = Integer.parseInt(dmy[0]);
+        int month = Integer.parseInt(dmy[1]);
+        int year = Integer.parseInt(dmy[2]);
+
+        String newDate = "";
+        String newDay = "";
+        String newMonth = "";
+
+        YearMonth yearMonthObject = YearMonth.of(2000 + year, month);
+
+        if (typeOfRecurrence.equalsIgnoreCase("days") || typeOfRecurrence.equalsIgnoreCase("day")) {
+            day = day + loops;
+            while (day > yearMonthObject.lengthOfMonth()) {
+                day = day - yearMonthObject.lengthOfMonth();
+                month = month + 01;
+                if (month > 12) {
+                    year = year + 1;
+                    month = 01;
+                }
+                yearMonthObject = YearMonth.of(2000 + year, month);
+            }
+        }
+
+        if (typeOfRecurrence.equalsIgnoreCase("weeks") || typeOfRecurrence.equalsIgnoreCase("week")) {
+            day = day + loops * 7;
+            while (day > yearMonthObject.lengthOfMonth()) {
+                day = day - yearMonthObject.lengthOfMonth();
+                month = month + 01;
+                if (month > 12) {
+                    year = year + 1;
+                    month = 01;
+                }
+                yearMonthObject = YearMonth.of(2000 + year, month);
+            }
+        }
+
+        if (typeOfRecurrence.equalsIgnoreCase("months") || typeOfRecurrence.equalsIgnoreCase("month")) {
+            month = month + loops;
+            while (month > 12) {
+                month = month - 12;
+                year = year + 1;
+            }
+        }
+
+        if (typeOfRecurrence.equalsIgnoreCase("years") || typeOfRecurrence.equalsIgnoreCase("year")) {
+            year = year + loops;
+        }
+
+        newDay = convertIntegerToTwoCharString(day);
+
+        newMonth = convertIntegerToTwoCharString(month);
+
+        newDate = newDay + "/" + newMonth + "/" + year;
+
+        return newDate;
+    }
+
+```
 ###### \java\seedu\taskmanager\logic\commands\ListCommand.java
 ``` java
 /**
- * Lists all persons in the address book to the user.
+ * Lists all uncompleted tasks in the task manager to the user. It is able to
+ * list uncompleted tasks on a specific date as well.
  */
 public class ListCommand extends Command {
 
     public static final String COMMAND_WORD = "LIST";
 
     public static final String MESSAGE_USAGE = COMMAND_WORD + ": List all tasks\n" + COMMAND_WORD
-            + " today: List all uncompleted tasks with today's date\n";
-    public static final String MESSAGE_SUCCESS_ALL_TASK = "Listed all tasks";
-    public static final String MESSAGE_SUCCESS_UNCOMPLETED_TASK_FOR_TODAY = "Listed all uncompleted tasks for today";
+            + " day/date: List all uncompleted tasks with day/date\n";
+    public static final String MESSAGE_SUCCESS_ALL_TASK = "Listed all uncompleted tasks";
+    public static final String MESSAGE_SUCCESS_UNCOMPLETED_TASK_FOR_DATE = "Listed all uncompleted tasks for ";
 
     private final Set<String> keywords;
 
@@ -26,8 +101,113 @@ public class ListCommand extends Command {
             return new CommandResult(MESSAGE_SUCCESS_ALL_TASK);
         } else {
             model.updateFilteredTaskListForListCommand(keywords, false);
-            return new CommandResult(MESSAGE_SUCCESS_UNCOMPLETED_TASK_FOR_TODAY);
+            return new CommandResult(MESSAGE_SUCCESS_UNCOMPLETED_TASK_FOR_DATE + keywords.toString());
         }
+    }
+}
+```
+###### \java\seedu\taskmanager\logic\commands\RecurringCommand.java
+``` java
+/**
+ * Recurs an existing task in the task manager. Application is only able to
+ * recur events and deadlines, floating task cannot be recurred.
+ */
+public class RecurringCommand extends Command {
+
+    public static final String COMMAND_WORD = "RECUR";
+
+    public static final String MESSAGE_USAGE = COMMAND_WORD + ": Recurs the entire task identified "
+            + "by the index number used in the last task listing.\n" + "Parameters: INDEX NUMBER TYPEOFRECURRENCE\n"
+            + "Example: " + COMMAND_WORD + " 1 4 days will result in task #1 being recurred everyday for 4 days"
+            + "Example: " + COMMAND_WORD + " 3 3 weeks will result in task #3 being recurred on that date for 3 weeks";
+
+    public static final String MESSAGE_DUPLICATE_TASK = "This task already exists in the task manager.";
+    public static final String MESSAGE_RECURRING_TASK_SUCCESS = "Task has successfully recurred ";
+    public static final String MESSAGE_RECURRING_FLOATING_TASK_FAILURE = "Unable to create recurring "
+            + "task for floating task!";
+    public static final String RECURRING_TASK_VALIDATION_REGEX = "\\d+\\s+\\d+\\s+[a-zA-Z]+";
+    public static final String RECURRING_TASK_VALIDATION_REGEX2 = "[^\\s].*";
+    public static final String EMPTY_FIELD = "EMPTY_FIELD";
+
+    private final int taskListIndex;
+    private final int numberOfRecurrence;
+    private final String typeOfRecurrence;
+    private Task recurringTask;
+
+    public RecurringCommand(int taskListIndex, int numberOfRecurrence, String typeOfRecurrence) {
+        assert taskListIndex > 0;
+        this.taskListIndex = taskListIndex - 1;
+        this.numberOfRecurrence = numberOfRecurrence;
+        this.typeOfRecurrence = typeOfRecurrence;
+    }
+
+    public CommandResult execute() throws CommandException {
+
+        List<ReadOnlyTask> lastShownList = model.getFilteredTaskList();
+
+        if (taskListIndex >= lastShownList.size()) {
+            throw new CommandException(Messages.MESSAGE_INVALID_TASK_DISPLAYED_INDEX);
+        }
+
+        ReadOnlyTask taskToRecur = lastShownList.get(taskListIndex);
+
+        if (taskToRecur.isFloatingTask()) {
+            throw new CommandException(MESSAGE_RECURRING_FLOATING_TASK_FAILURE);
+        }
+
+        if (taskToRecur.isDeadlineTask()) {
+
+            for (int loop = 1; loop <= numberOfRecurrence; loop++) {
+
+                try {
+                    recurringTask = new Task(taskToRecur.getTaskName(), taskToRecur.getStartDate(),
+                            taskToRecur.getStartTime(),
+                            new EndDate(DateTimeUtil.getFutureDate(loop, typeOfRecurrence,
+                                    taskToRecur.getEndDate().toString())),
+                            taskToRecur.getEndTime(), false, taskToRecur.getCategories());
+                } catch (IllegalValueException ive) {
+                    throw new CommandException("Wrong format for deadline!");
+                }
+
+                if (DateTimeUtil.isValidDate(recurringTask.getEndDate().toString())) {
+                    try {
+                        model.addTask(recurringTask);
+                    } catch (DuplicateTaskException dte) {
+                        throw new CommandException(MESSAGE_DUPLICATE_TASK);
+                    }
+                }
+            }
+        }
+
+        if (taskToRecur.isEventTask()) {
+            for (int loop = 1; loop <= numberOfRecurrence; loop++) {
+                try {
+                    recurringTask = new Task(taskToRecur.getTaskName(),
+                            new StartDate(DateTimeUtil.getFutureDate(loop, typeOfRecurrence,
+                                    taskToRecur.getStartDate().toString())),
+                            taskToRecur.getStartTime(),
+                            new EndDate(DateTimeUtil.getFutureDate(loop, typeOfRecurrence,
+                                    taskToRecur.getEndDate().toString())),
+                            taskToRecur.getEndTime(), false, taskToRecur.getCategories());
+                } catch (IllegalValueException ive) {
+                    throw new CommandException("Wrong format for event!");
+                }
+
+                if (DateTimeUtil.isValidDate(recurringTask.getStartDate().toString())
+                        && DateTimeUtil.isValidDate(recurringTask.getEndDate().toString())) {
+                    try {
+                        model.addTask(recurringTask);
+                    } catch (DuplicateTaskException dte) {
+                        throw new CommandException(MESSAGE_DUPLICATE_TASK);
+                    }
+                }
+
+            }
+        }
+
+        model.updateFilteredListToShowAll();
+        return new CommandResult(
+                String.format(MESSAGE_RECURRING_TASK_SUCCESS, String.valueOf(numberOfRecurrence), " number of times"));
     }
 }
 ```
@@ -35,7 +215,7 @@ public class ListCommand extends Command {
 ``` java
 /**
  * Searches and lists all tasks in task manager whose taskname contains any of the argument keywords.
- * Keyword matching is case sensitive.
+ * Keyword matching is not case sensitive.
  */
 public class SearchCommand extends Command {
 
@@ -74,19 +254,24 @@ public class ListCommandParser {
 
         /**
          * If the command "LIST" is used without any arguments, return an empty
-         * set.
+         * keyword set.
          */
         if (args.trim().isEmpty()) {
             return new ListCommand(keyWordSet);
         }
 
-        final Matcher matcher = KEYWORDS_ARGS_FORMAT.matcher(args.trim());
-        if (!matcher.matches()) {
-            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
+        /**
+         * Identify if user has input a DD/MM/YY format, otherwise, will convert
+         * what they input into a DD/MM/YY format
+         */
+        if (args.trim().matches(StartDate.STARTDATE_VALIDATION_REGEX1)) {
+            keyWordArray = new String[] { args.trim() };
+            keyWordSet = new HashSet<>(Arrays.asList(keyWordArray));
+            return new ListCommand(keyWordSet);
         }
 
         try {
-            keyWordArray = new String[] { CurrentDate.getNewDate(args.trim()) };
+            keyWordArray = new String[] { DateTimeUtil.getNewDate(args.trim()) };
         } catch (IllegalValueException e) {
             return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, ListCommand.MESSAGE_USAGE));
         }
@@ -157,6 +342,40 @@ public class ListCommandParser {
     }
 }
 ```
+###### \java\seedu\taskmanager\logic\parser\RecurringCommandParser.java
+``` java
+/**
+ * Parses input arguments and creates a new RecurringCommand object
+ */
+public class RecurringCommandParser {
+
+    private int taskListIndex;
+    private int numberOfRecurrence;
+    private String typeOfRecurrence;
+
+    public Command parse(String args) {
+        assert args != null;
+
+        if (args.trim().isEmpty()) {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, RecurringCommand.MESSAGE_USAGE));
+        }
+
+        if (args.trim().matches(RecurringCommand.RECURRING_TASK_VALIDATION_REGEX)) {
+
+            String[] splited = args.trim().split("\\s+");
+
+            taskListIndex = Integer.parseInt(splited[0]);
+            numberOfRecurrence = Integer.parseInt(splited[1]);
+            typeOfRecurrence = splited[2];
+
+        } else {
+            return new IncorrectCommand(String.format(MESSAGE_INVALID_COMMAND_FORMAT, RecurringCommand.MESSAGE_USAGE));
+        }
+
+        return new RecurringCommand(taskListIndex, numberOfRecurrence, typeOfRecurrence);
+    }
+}
+```
 ###### \java\seedu\taskmanager\logic\parser\SearchCommandParser.java
 ``` java
 /**
@@ -182,11 +401,58 @@ public class SearchCommandParser {
 
 }
 ```
+###### \java\seedu\taskmanager\model\Model.java
+``` java
+    /**
+     * Updates the filter of the filtered task list to filter by the given
+     * keywords and uncompleted tasks
+     */
+    void updateFilteredTaskListForListCommand(Set<String> keywords, boolean isComplete);
+
+```
 ###### \java\seedu\taskmanager\model\ModelManager.java
 ``` java
     @Override
     public void updateFilteredTaskListForListCommand(Set<String> keywords, boolean isComplete) {
         updateFilteredTaskList(new PredicateExpression(new ListQualifier(keywords, isComplete)));
+        indicateTaskManagerChanged();
+    }
+
+```
+###### \java\seedu\taskmanager\model\ModelManager.java
+``` java
+    private class TaskQualifier implements Qualifier {
+        private Set<String> taskKeyWords;
+
+        TaskQualifier(Set<String> taskKeyWords) {
+            this.taskKeyWords = taskKeyWords;
+        }
+
+        public boolean run(ReadOnlyTask task) {
+            return (taskKeyWords.stream()
+                    .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getTaskName().fullTaskName, keyword))
+                    .findAny().isPresent())
+                    || (taskKeyWords.stream()
+                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getStartDate().value, keyword))
+                            .findAny().isPresent())
+                    || (taskKeyWords.stream()
+                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getStartTime().value, keyword))
+                            .findAny().isPresent())
+                    || (taskKeyWords.stream()
+                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getEndDate().value, keyword))
+                            .findAny().isPresent())
+                    || (taskKeyWords.stream()
+                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getEndTime().value, keyword))
+                            .findAny().isPresent())
+                    || (taskKeyWords.stream()
+                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getCategories(), keyword))
+                            .findAny().isPresent());
+        }
+
+        @Override
+        public String toString() {
+            return "task name=" + String.join(", ", taskKeyWords);
+        }
     }
 
 ```
@@ -202,14 +468,12 @@ public class SearchCommandParser {
         }
 
         public boolean run(ReadOnlyTask task) {
-            return (task.getIsMarkedAsComplete().equals(isComplete)) && (taskKeyWords.stream()
+            return (task.getIsMarkedAsComplete().equals(isComplete) && (taskKeyWords.stream()
                     .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getStartDate().value, keyword)).findAny()
-                    .isPresent());
-            // && (taskKeyWords.stream()
-            // .filter(keyword ->
-            // StringUtil.containsWordIgnoreCase(task.getEndDate().value,
-            // keyword))
-            // .findAny().isPresent());
+                    .isPresent()))
+                    || (task.getIsMarkedAsComplete().equals(isComplete) && (taskKeyWords.stream()
+                            .filter(keyword -> StringUtil.containsWordIgnoreCase(task.getEndDate().value, keyword))
+                            .findAny().isPresent()));
         }
 
         @Override
@@ -217,7 +481,7 @@ public class SearchCommandParser {
             return "task name=" + String.join(", ", taskKeyWords);
         }
     }
-}
+
 ```
 ###### \java\seedu\taskmanager\model\util\SampleDataUtil.java
 ``` java
@@ -225,36 +489,162 @@ public class SampleDataUtil {
     public static Task[] getSampleTasks() {
         try {
             return new Task[] {
+                new Task(new TaskName("Start on Quiz 6"), new StartDate("01/03/17"), new StartTime("0001"),
+                        new EndDate("30/03/17"), new EndTime("0002"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2150", "High", "NUS")),
                 new Task(new TaskName("Eat breakfast with mom"), new StartDate("03/03/17"), new StartTime("1000"),
-                        new EndDate("03/03/17"), new EndTime("1100"), new Boolean(false),
-                        new UniqueCategoryList("just", "friends")),
+                        new EndDate("03/03/17"), new EndTime("1100"), Boolean.FALSE,
+                        new UniqueCategoryList("family")),
+                new Task(new TaskName("Start on the CS2103 project"), new StartDate("03/03/17"),
+                        new StartTime("1400"), new EndDate("03/04/17"), new EndTime("1800"), Boolean.FALSE,
+                        new UniqueCategoryList("CS2103", "High", "NUS")),
+                new Task(new TaskName("Eat dinner with friends"), new StartDate("09/03/17"),
+                        new StartTime("1800"), new EndDate("09/03/17"), new EndTime("2000"), Boolean.FALSE,
+                        new UniqueCategoryList("just", "friends", "low")),
+                new Task(new TaskName("Finish assignment 5"), new StartDate("25/03/17"), new StartTime("0659"),
+                        new EndDate("30/03/17"), new EndTime("2341"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2100", "NUS")),
+                new Task(new TaskName("Revise for midterms"), new StartDate("26/03/17"), new StartTime("1200"),
+                        new EndDate("30/03/17"), new EndTime("1400"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2130", "NUS")),
+                new Task(new TaskName("Meet prof"), new StartDate("30/03/17"), new StartTime("0800"),
+                        new EndDate("30/03/17"), new EndTime("1000"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2150", "NUS")),
+                new Task(new TaskName("Make sense of topic 3"), new StartDate("30/03/17"), new StartTime("1400"),
+                        new EndDate("31/03/17"), new EndTime("1400"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2100", "NUS")),
+                new Task(new TaskName("Buy a cat"), new StartDate("30/03/17"), new StartTime("1800"),
+                        new EndDate("01/04/17"), new EndTime("2359"), Boolean.FALSE,
+                        new UniqueCategoryList("family", "High")),
+                new Task(new TaskName("Rest for the day"), new StartDate("01/04/17"), new StartTime("0030"),
+                        new EndDate("02/04/17"), new EndTime("2359"), Boolean.FALSE,
+                        new UniqueCategoryList("lepak")),
+                new Task(new TaskName("Eat breakfast"), new StartDate("02/04/17"), new StartTime("0800"),
+                        new EndDate("02/04/17"), new EndTime("0830"), Boolean.FALSE,
+                        new UniqueCategoryList("family")),
+                new Task(new TaskName("Hand in assignment"), new StartDate("02/04/17"), new StartTime("0930"),
+                        new EndDate("02/04/17"), new EndTime("1000"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2100", "NUS")),
+                new Task(new TaskName("Do up minutes"), new StartDate("02/04/17"), new StartTime("1030"),
+                        new EndDate("02/04/17"), new EndTime("1100"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2150", "NUS")),
+                new Task(new TaskName("Try hard for CS2103 project"), new StartDate("04/04/17"),
+                        new StartTime("1400"), new EndDate("05/04/17"), new EndTime("1500"), Boolean.FALSE,
+                        new UniqueCategoryList("CS2103", "NUS")),
+                new Task(new TaskName("Try very hard for CS2103"), new StartDate("05/04/17"), new StartTime("1500"),
+                        new EndDate("05/05/17"), new EndTime("1600"), Boolean.FALSE,
+                        new UniqueCategoryList("CS2103", "NUS")),
+                new Task(new TaskName("Meet @ Hv"), new StartDate("05/05/17"), new StartTime("0000"),
+                        new EndDate("06/05/17"), new EndTime("2359"), Boolean.FALSE,
+                        new UniqueCategoryList("lepak")),
+                new Task(new TaskName("Take a quick nap"), new StartDate("06/05/17"), new StartTime("1400"),
+                        new EndDate("06/05/17"), new EndTime("1800"), Boolean.FALSE,
+                        new UniqueCategoryList("lepak")),
+                new Task(new TaskName("Meet boss"), new StartDate("07/05/17"), new StartTime("0000"),
+                        new EndDate("08/05/17"), new EndTime("2359"), Boolean.FALSE,
+                        new UniqueCategoryList("work")),
+                new Task(new TaskName("Regret taking this job"), new StartDate("09/05/17"), new StartTime("0000"),
+                        new EndDate("10/05/17"), new EndTime("2359"), Boolean.FALSE,
+                        new UniqueCategoryList("work")),
                 new Task(new TaskName("Eat lunch at techno"), new StartDate("EMPTY_FIELD"),
                         new StartTime("EMPTY_FIELD"), new EndDate("04/03/17"), new EndTime("1400"),
-                        new Boolean(false), new UniqueCategoryList("no", "friends")),
-                new Task(new TaskName("Eat dinner with my only 2 friends"), new StartDate("09/03/17"),
-                        new StartTime("1800"), new EndDate("09/03/17"), new EndTime("2000"), new Boolean(false),
-                        new UniqueCategoryList()),
-                new Task(new TaskName("Start on the CS2103 project"), new StartDate("03/03/17"),
-                        new StartTime("1400"), new EndDate("03/04/17"), new EndTime("1800"), new Boolean(false),
+                        Boolean.FALSE, new UniqueCategoryList("no", "friends", "NUS")),
+                new Task(new TaskName("Assignment 2"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("27/03/17"), new EndTime("1400"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2150", "NUS", "High")),
+                new Task(new TaskName("Assignment 4"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("28/03/17"), new EndTime("1400"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2130", "NUS", "High")),
+                new Task(new TaskName("Assignment 3"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("29/03/17"), new EndTime("1400"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2100", "NUS", "High")),
+                new Task(new TaskName("Finish v0.4"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("30/03/17"), new EndTime("1100"), Boolean.FALSE,
+                        new UniqueCategoryList("CS2103", "NUS", "High")),
+                new Task(new TaskName("Hand in proposal to Dr Soh"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("30/03/17"), new EndTime("1200"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2150", "Medium")),
+                new Task(new TaskName("Sign up for energy conference"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("30/03/17"), new EndTime("1300"),
+                        Boolean.FALSE, new UniqueCategoryList("NUS", "Low")),
+                new Task(new TaskName("Email prof for answers"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("30/03/17"), new EndTime("1400"),
+                        Boolean.FALSE, new UniqueCategoryList("IE2130", "High")),
+                new Task(new TaskName("Assignment 5"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("31/03/17"), new EndTime("1400"), Boolean.FALSE,
+                        new UniqueCategoryList("IE2100", "NUS")),
+                new Task(new TaskName("Prank the world"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("01/04/17"), new EndTime("2359"), Boolean.FALSE,
+                        new UniqueCategoryList("fun")),
+                new Task(new TaskName("Finish Bryson Science Challenge"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("02/04/17"), new EndTime("1400"), Boolean.FALSE,
+                        new UniqueCategoryList("GEH1033", "NUS")),
+                new Task(new TaskName("Find AA personnel"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("03/04/17"), new EndTime("1400"), Boolean.FALSE,
+                        new UniqueCategoryList("NUS")),
+                new Task(new TaskName("Ready for work"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("06/05/17"), new EndTime("1700"), Boolean.FALSE,
                         new UniqueCategoryList("work")),
-                new Task(new TaskName("Give up on CS2103 project"), new StartDate("04/04/17"),
-                        new StartTime("1400"), new EndDate("05/04/17"), new EndTime("1500"), new Boolean(false),
-                        new UniqueCategoryList("lepak")),
-                new Task(new TaskName("Try again for CS2103"), new StartDate("05/04/17"), new StartTime("1500"),
-                        new EndDate("05/05/17"), new EndTime("1600"), new Boolean(false),
+                new Task(new TaskName("Hand in report"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("07/06/17"), new EndTime("2358"), Boolean.FALSE,
+                        new UniqueCategoryList("High")),
+                new Task(new TaskName("Sell myself"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("07/07/17"), new EndTime("2357"), Boolean.FALSE,
                         new UniqueCategoryList("work")),
-                new Task(new TaskName("Endless cycles of regret"), new StartDate("EMPTY_FIELD"),
+                new Task(new TaskName("Get ready for school"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("07/08/20"), new EndTime("2356"),
+                        Boolean.FALSE, new UniqueCategoryList("NUS")),
+                new Task(new TaskName("Buy a cat"), new StartDate("EMPTY_FIELD"),
                         new StartTime("EMPTY_FIELD"), new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"),
-                        new Boolean(false), new UniqueCategoryList("lepak")),
-                new Task(new TaskName("Time to relax a little"), new StartDate("06/05/17"), new StartTime("1400"),
-                        new EndDate("06/05/17"), new EndTime("1800"), new Boolean(false),
-                        new UniqueCategoryList("lepak")),
-                new Task(new TaskName("Chiong all day everyday"), new StartDate("EMPTY_FIELD"),
+                        Boolean.FALSE, new UniqueCategoryList("work")),
+                new Task(new TaskName("Buy a dog"), new StartDate("EMPTY_FIELD"),
                         new StartTime("EMPTY_FIELD"), new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"),
-                        new Boolean(false), new UniqueCategoryList("work")),
-                new Task(new TaskName("Get it done"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
-                        new EndDate("06/05/17"), new EndTime("1700"), new Boolean(false),
-                        new UniqueCategoryList("work")) };
+                        Boolean.FALSE, new UniqueCategoryList("lepak")),
+                new Task(
+                        new TaskName("Unnecessary Floating Task Name to show how long this task name can actually"
+                                + "get and as you can see it can go really long like seriously"
+                                + "it goes on and on and on"),
+                        new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"), new EndDate("EMPTY_FIELD"),
+                        new EndTime("EMPTY_FIELD"), Boolean.FALSE, new UniqueCategoryList("test")),
+                new Task(new TaskName("Find a boyfriend/girlfriend"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"),
+                        Boolean.FALSE, new UniqueCategoryList("story")),
+                new Task(new TaskName("Get serious"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")),
+                new Task(new TaskName("Propose"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")),
+                new Task(new TaskName("BTO"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")),
+                new Task(new TaskName("Fail to find BTO"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")),
+                new Task(new TaskName("Try again for BTO"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")),
+                new Task(new TaskName("Get married"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")),
+                new Task(new TaskName("Think about having kids"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"),
+                        Boolean.FALSE, new UniqueCategoryList("story")),
+                new Task(new TaskName("Argue about kids"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")),
+                new Task(new TaskName("Argue about married life"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"),
+                        Boolean.FALSE, new UniqueCategoryList("story")),
+                new Task(new TaskName("Had enough of married life"), new StartDate("EMPTY_FIELD"),
+                        new StartTime("EMPTY_FIELD"), new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"),
+                        Boolean.FALSE, new UniqueCategoryList("story")),
+                new Task(new TaskName("Divorce"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")),
+                new Task(new TaskName("Netflix"), new StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
+                        new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"), Boolean.FALSE,
+                        new UniqueCategoryList("story")) };
             // CHECKSTYLE.ON: LineLength
         } catch (IllegalValueException e) {
             throw new AssertionError("Sample data cannot be invalid", e);
@@ -273,35 +663,4 @@ public class SampleDataUtil {
         }
     }
 }
-// new Task(new TaskName("eat lunch"), new
-// StartDate("03/03/17"), new StartTime("1400"),
-// new EndDate("03/03/17"), new EndTime("1600"), new
-// Boolean(false),
-// new UniqueCategoryList("essential")), // event
-// new Task(new TaskName("eat breakfast"), new
-// StartDate("23/11/17"), new StartTime("1400"),
-// new EndDate("23/11/17"), new EndTime("1600"), new
-// Boolean(false),
-// new UniqueCategoryList("essential", "friends")), // event
-// new Task(new TaskName("eat some more"), new
-// StartDate("13/01/17"), new StartTime("2100"),
-// new EndDate("14/01/17"), new EndTime("2200"), new
-// Boolean(true),
-// new UniqueCategoryList("todo")), // event
-// new Task(new TaskName("omg stop eating"), new
-// StartDate("03/02/17"), new StartTime("1400"),
-// new EndDate("03/02/50"), new EndTime("1600"), new
-// Boolean(true),
-// new UniqueCategoryList("important")), // event
-// new Task(new TaskName("i cant stop eating"), new
-// StartDate("06/03/17"), new StartTime("1200"),
-// new EndDate("06/03/17"), new EndTime("2300"), new
-// Boolean(true),
-// new UniqueCategoryList("problem", "important")), // event
-// new Task(new TaskName("ded"), new
-// StartDate("EMPTY_FIELD"), new StartTime("EMPTY_FIELD"),
-// new EndDate("EMPTY_FIELD"), new EndTime("EMPTY_FIELD"),
-// new Boolean(false),
-// new UniqueCategoryList("essential")) }; // floating
-// task
 ```
